# Steganography

./: CMakeLists.txt  canWriteMessage.cpp  commands.txt  main.cpp  steganography
BMP/: processBMP.cpp  readBMPHeader.cpp  readMessageFromBMP.cpp  writeMessageToBMP.cpp
FileInfo/: printFileInfo.cpp  printFileName.cpp  printFilePermissions.cpp  printFileSize.cpp  printLastAccessTime.cpp  printLastModificationTime.cpp  printLastStatusChangeTime.cpp
PPM/: processPPM.cpp  readMessageFromPPM.cpp  readPPM.cpp  writeMessageToPPM.cpp
additional/: binaryToChar.cpp  charToBinary.cpp  checkFilePermissions.cpp  displayHelp.cpp  getFileSize.cpp  trim.cpp
changedImages/ppm/: ref_lynx.ppm
err/ppm/: ref_simple.ppm  simplebytes.ppm  simpleform.ppm  simplemaxcolor.ppm  simplevaluemaxcolor.ppm
images/ppm/: lynx_222.ppm  simple.ppm
